--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
+
+    <org.osmdroid.views.MapView
+        android:id="@+id/mapView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <!-- Header -->
     <LinearLayout
@@ -15,15 +19,6 @@
         android:background="@android:color/white"
         android:elevation="4dp">
 
-        <ImageView
-            android:id="@+id/btnButton"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/ic_back"
-            android:contentDescription="Quay lại"
-            android:padding="4dp"
-            android:background="?android:selectableItemBackgroundBorderless" />
-
         <TextView
             android:id="@+id/headerTitle"
             android:layout_width="wrap_content"
@@ -35,11 +30,4 @@
             android:textColor="@android:color/black" />
     </LinearLayout>
 
-    <!-- Map -->
-    <org.osmdroid.views.MapView
-        android:id="@+id/mapView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/headerLayout" />
-
-</RelativeLayout>
+</FrameLayout>
