--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,10 +7,10 @@
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_user"
         android:title="Tôi" />
-    <item
-        android:id="@+id/nav_notifications"
-        android:icon="@drawable/ic_notifications"
-        android:title="Thông báo" />
+<!--    <item-->
+<!--        android:id="@+id/nav_notifications"-->
+<!--        android:icon="@drawable/ic_notifications"-->
+<!--        android:title="Thông báo" />-->
     <item
         android:id="@+id/nav_map"
         android:icon="@drawable/ic_map"
