--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -26,4 +26,23 @@
         app:itemTextColor="@color/nav_selector"
         android:paddingBottom="0dp"
         android:fitsSystemWindows="true" />
+
+    <TextView
+        android:id="@+id/new_product_badge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textColor="@android:color/white"
+        android:background="@drawable/badge_background"
+        android:gravity="center"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:minWidth="18dp"
+        android:minHeight="18dp"
+        android:textSize="10sp"
+        android:visibility="gone"
+        android:elevation="2dp"
+        app:layout_anchor="@id/bottomNavigation"
+        app:layout_anchorGravity="top|end"
+        android:layout_marginEnd="80dp"  android:layout_marginBottom="25dp" tools:text="3" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
