--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,4 +1,5 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_home"
@@ -17,6 +18,7 @@
         android:title="Bản đồ" />
     <item
         android:id="@+id/nav_chat"
+        android:title="Chat AI"
         android:icon="@drawable/ic_chat"
-        android:title="Chat AI" />
+        app:actionLayout="@layout/custom_menu_item_layout" />
 </menu>
