--- a/app/src/main/res/layout/item_delivery_card.xml
+++ b/app/src/main/res/layout/item_delivery_card.xml
@@ -59,10 +59,10 @@
             android:id="@+id/layoutAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/iconAddress"
@@ -85,10 +85,10 @@
             android:id="@+id/layoutDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/iconDate"
@@ -110,10 +110,11 @@
             android:id="@+id/layoutName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/iconName"
                 android:layout_width="20dp"
@@ -135,10 +136,11 @@
             android:id="@+id/layoutPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/iconPhone"
                 android:layout_width="20dp"
@@ -159,10 +161,11 @@
             android:id="@+id/layoutNote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/iconNote"
                 android:layout_width="20dp"
@@ -184,10 +187,11 @@
             android:id="@+id/layoutStorageName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/iconStorageName"
                 android:layout_width="20dp"
@@ -208,10 +212,11 @@
             android:id="@+id/layoutOrderId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/iconOrderId"
                 android:layout_width="20dp"
@@ -233,10 +238,11 @@
             android:id="@+id/layoutUserId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/iconUserId"
                 android:layout_width="20dp"
@@ -303,15 +309,27 @@
             android:orientation="vertical"
             android:visibility="gone" />
 
+        <!-- Price -->
+        <TextView
+            android:id="@+id/tvTotal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="end"
+            android:text="Tổng Tiền"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
         <!-- Nút hành động -->
         <LinearLayout
             android:id="@+id/layoutActions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="4dp"
             android:layout_marginTop="12dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:layout_marginHorizontal="4dp">
+            android:orientation="horizontal">
             <!-- Nút bấm xem thêm sản phẩm -->
             <LinearLayout
                 android:id="@+id/layoutToggleProducts"
@@ -350,22 +368,28 @@
                 android:gravity="end"
                 android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/btnCancel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <ImageView
+                    android:id="@+id/ivCancel"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:backgroundTint="@color/white"
-                    android:text="Cancel"
-                    android:textColor="@color/red" />
+                    android:background="@drawable/rounded_orange_background"
+                    android:contentDescription="Edit icon"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_delete2"
+                    card_view:tint="@color/white" />
 
-                <Button
-                    android:id="@+id/btnNext"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/orange_theme"
-                    android:text="Next"
-                    android:textColor="@android:color/white" />
+                <ImageView
+                    android:id="@+id/ivNext"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/rounded_blue_background"
+                    android:contentDescription="Edit icon"
+                    android:padding="0dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_arrow_right"
+                    card_view:tint="@color/white" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
